Update Nonlinear Regression via Gradient Descent-Copy1.ipynb

--- a/Nonlinear Regression via Gradient Descent-Copy1.ipynb
+++ b/Nonlinear Regression via Gradient Descent-Copy1.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "from sympy import *
     "def gradient_descent(f, point, alpha = 0.01):\n",
     "    x, y, z = symbols('x y z', real=True)\n",
     "    # Get the partial derivatives\n",
